--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,7 @@
 remote_theme: mmistakes/minimal-mistakes
 plugins:
   - jekyll-include-cache
+  - jekyll-remote-theme
 
 nav:
   - title: 《飞鸟集 2025》
